Fix dark mode icons

--- a/themes/blog-theme/assets/css/main.css
+++ b/themes/blog-theme/assets/css/main.css
@@ -98,6 +98,12 @@ body {
     --main-bg-color: #151515;
     --main-text-color: #ddd;
   }
+  .social-icons img {
+    filter: invert(0.8);
+  }
+  .social-icons img:hover {
+    filter: invert(1);
+  }
 }
 
 h1 {
